ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/LadminAI_Appointment_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Product-neutral configuration for LadminAI Smart Appointment.</description>
    <label>LadminAI Smart Appointment Setting</label>
    <pluralLabel>LadminAI Smart Appointment Settings</pluralLabel>
</CustomObject>