ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Booking_Horizon_Days__c.field-meta.xml
<CustomField>
    <fullName>LadminAI_Booking_Horizon_Days__c</fullName>
    <label>Booking Horizon Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>