ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Cancellation_Cutoff_Minutes__c.field-meta.xml
<CustomField>
    <fullName>LadminAI_Cancellation_Cutoff_Minutes__c</fullName>
    <description>Minimum notice required before an appointment can be cancelled. Zero disables the advance-notice cutoff.</description>
    <label>Cancellation Cutoff Minutes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>