ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Create_Salesforce_Event__c.field-meta.xml
<CustomField>
    <defaultValue>true</defaultValue>
    <fullName>LadminAI_Create_Salesforce_Event__c</fullName>
    <label>Create Salesforce Event</label>
    <type>Checkbox</type>
</CustomField>