ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Default_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>LadminAI_Default_Booking_Status__c</fullName>
    <label>Default Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
            <value><fullName>Reserved</fullName><default>false</default><label>Reserved</label></value>
            <value><fullName>Booked</fullName><default>true</default><label>Booked</label></value>
            <value><fullName>Confirmed</fullName><default>false</default><label>Confirmed</label></value>
            <value><fullName>Checked In</fullName><default>false</default><label>Checked In</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Arrived</fullName><default>false</default><label>Arrived</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
            <value><fullName>No Show</fullName><default>false</default><label>No Show</label></value>
            <value><fullName>Rescheduled</fullName><default>false</default><label>Rescheduled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>