ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Default_Slot_Minutes__c.field-meta.xml
<CustomField>
    <fullName>LadminAI_Default_Slot_Minutes__c</fullName>
    <label>Default Slot Duration Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>