ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Default_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>LadminAI_Default_Time_Zone__c</fullName>
    <label>Default Time Zone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>