ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Enable_AI_Insights__c.field-meta.xml
<CustomField><fullName>LadminAI_Enable_AI_Insights__c</fullName><label>Enable AI Smart Insights</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>