ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Enable_Compatibility_Aura__c.field-meta.xml
<CustomField>
    <defaultValue>true</defaultValue>
    <fullName>LadminAI_Enable_Compatibility_Aura__c</fullName>
    <label>Enable Compatibility Aura</label>
    <type>Checkbox</type>
</CustomField>