ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Enable_Customer_Notifications__c.field-meta.xml
<CustomField><fullName>LadminAI_Enable_Customer_Notifications__c</fullName><defaultValue>false</defaultValue><fieldManageability>DeveloperControlled</fieldManageability><label>Enable Customer Notifications</label><type>Checkbox</type></CustomField>