ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Enable_Internal_Notifications__c.field-meta.xml
<CustomField><fullName>LadminAI_Enable_Internal_Notifications__c</fullName><defaultValue>false</defaultValue><description>Sends operational appointment emails to the Salesforce user who booked the appointment. Notification failures never block scheduling.</description><label>Enable Internal Notifications</label><type>Checkbox</type></CustomField>