ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Enable_Parent_Adapter__c.field-meta.xml
<CustomField>
    <defaultValue>false</defaultValue>
    <description>Reserves activation of an approved generic parent-record adapter. No adapter executes in Gate 1.</description>
    <fullName>LadminAI_Enable_Parent_Adapter__c</fullName>
    <label>Enable Parent Adapter</label>
    <type>Checkbox</type>
</CustomField>