ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Max_Active_Service_Resources__c.field-meta.xml
<CustomField><fullName>LadminAI_Max_Active_Service_Resources__c</fullName><label>Max Active Service Resources</label><type>Number</type><precision>3</precision><scale>0</scale><required>false</required></CustomField>