ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Minimum_Lead_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>LadminAI_Minimum_Lead_Time_Minutes__c</fullName>
    <label>Minimum Lead Time Minutes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>