ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_OpenAI_Named_Credential__c.field-meta.xml
<CustomField><fullName>LadminAI_OpenAI_Named_Credential__c</fullName><label>OpenAI Named Credential</label><type>Text</type><length>80</length><required>false</required></CustomField>