ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Reminder_Lead_Hours__c.field-meta.xml
<CustomField><fullName>LadminAI_Reminder_Lead_Hours__c</fullName><defaultValue>24</defaultValue><fieldManageability>DeveloperControlled</fieldManageability><label>Reminder Lead Hours</label><precision>3</precision><scale>0</scale><type>Number</type></CustomField>