ladminai-appointment/main/default/objects/LadminAI_Appointment_Settings__mdt/fields/LadminAI_Reschedule_Cutoff_Minutes__c.field-meta.xml
<CustomField>
    <fullName>LadminAI_Reschedule_Cutoff_Minutes__c</fullName>
    <description>Minimum notice required before an appointment can be rescheduled. Zero disables the advance-notice cutoff.</description>
    <label>Reschedule Cutoff Minutes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>